# The-amazing-adventures-of-not-that-interesting-adventurers

./: CMakeLists.txt  README.md  Roadmap.md
cmake/modules/: FindCURSES.cmake  FindPDCurses.cmake
includes/: UIInterface.hpp
sources/common/: main.cpp  test.cpp
sources/unix/: UnixCurses.cpp
sources/win32/: WindowsCurses.cpp
